--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bioseq"
+name = "bio-seq"
 version = "0.1.0"
 authors = ["jeff-k <jeff_k@fastmail.com>"]
 edition = "2018"
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitvec = "^0"
+bitvec = "^0.22.3"
