update crate info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,13 @@ name = "bio-seq"
 version = "0.1.0"
 authors = ["jeff-k <jeff_k@fastmail.com>"]
 edition = "2018"
+description = "Bit packed and well-typed biological sequences"
+homepage = "https://github.com/jeff-k/bio-seq"
+documentation = "https://docs.rs/bio-seq"
+readme = "README.md"
+license = "MIT"
+keywords = ["bioinformatics", "kmers", "sequencing", "dna"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 bitvec = "^0.22.3"
