--- a/bio-seq-derive/Cargo.toml
+++ b/bio-seq-derive/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = "1.0.91"
-quote = "1.0.17"
+syn = { version="1.0.91", features=["full"] }
+quote = "1.0.18"
