--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bio-seq"
-version = "0.8.1"
+version = "0.8.3"
 authors = ["jeff-k <jeff_k@fastmail.com>"]
 edition = "2021"
 description = "Bit packed and well-typed biological sequences"
@@ -10,7 +10,13 @@ readme = "README.md"
 license = "MIT"
 keywords = ["bioinformatics", "kmer", "sequencing", "dna", "iupac"]
 
+[dev-dependencies]
+bio-streams = { git="https://github.com/jeff-k/bio-streams.git" }
+clap = { version="4", features=["derive"] }
 
 [dependencies]
 bitvec = "1"
 bio-seq-derive = "1.5.0"
+
+[[example]]
+name = "aminokmers"
