--- a/bio-seq/Cargo.toml
+++ b/bio-seq/Cargo.toml
@@ -17,7 +17,12 @@ keywords = ["bioinformatics", "kmer", "sequencing", "dna", "iupac"]
 [dependencies]
 bitvec = "1"
 bio-seq-derive = { path = "../bio-seq-derive" }
-once_cell = "1.8.0"
+once_cell = "1.19"
+serde = { version = "1", optional = true }
+serde_derive = { version = "1", optional = true }
+
+[features]
+serde = ["dep:serde",  "dep:serde_derive"]
 
 #[[example]]
 #name = "aminokmers"
