--- a/bio-seq/Cargo.toml
+++ b/bio-seq/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bio-seq"
-version = "0.12.0"
+version = "0.12.1"
 authors = ["jeff-k <jeff_k@fastmail.com>"]
 edition = "2021"
 description = "Bit packed and well-typed biological sequences"
@@ -8,7 +8,7 @@ homepage = "https://github.com/jeff-k/bio-seq"
 documentation = "https://docs.rs/bio-seq"
 readme = "README.md"
 license = "MIT"
-keywords = ["bioinformatics", "kmer", "sequencing", "dna", "iupac"]
+keywords = ["bioinformatics", "genomics", "science", "kmer", "sequencing", "dna", "iupac"]
 
 #[dev-dependencies]
 #bio-streams = { git="https://github.com/jeff-k/bio-streams.git" }
@@ -17,7 +17,6 @@ keywords = ["bioinformatics", "kmer", "sequencing", "dna", "iupac"]
 [dependencies]
 bitvec = "1"
 bio-seq-derive = { path = "../bio-seq-derive" }
-once_cell = "1.19"
 serde = { version = "1", optional = true, features=["derive"] }
 serde_derive = { version = "1", optional = true }
 
