Use the repository field in Cargo.toml

--- a/bio-seq/Cargo.toml
+++ b/bio-seq/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.12.3"
 authors = ["jeff-k <jeff_k@fastmail.com>"]
 edition = "2021"
 description = "Bit packed and well-typed biological sequences"
-homepage = "https://github.com/jeff-k/bio-seq"
+repository = "https://github.com/jeff-k/bio-seq"
 documentation = "https://docs.rs/bio-seq"
 license = "MIT"
 keywords = ["bioinformatics", "genomics", "kmer", "dna", "iupac"]
