--- a/bio-seq-derive/Cargo.toml
+++ b/bio-seq-derive/Cargo.toml
@@ -3,7 +3,7 @@ name = "bio-seq-derive"
 version = "2.0.1"
 authors = ["jeff-k <jeff_k@fastmail.com>"]
 edition = "2021"
-homepage = "https://github.com/jeff-k/bio-seq"
+repository = "https://github.com/jeff-k/bio-seq"
 description = "Derive macros for the bio-seq crate"
 license = "MIT"
 
