pedantic lints and doc

--- a/bio-seq/Cargo.toml
+++ b/bio-seq/Cargo.toml
@@ -18,7 +18,7 @@ rust-version = "1.79"
 
 [dependencies]
 bitvec = "1"
-bio-seq-derive = { path = "../bio-seq-derive", version="3.0.0" }
+bio-seq-derive = { path = "../bio-seq-derive", version="3.9.0" }
 serde = { version = "1", optional = true, features=["derive"] }
 serde_derive = { version = "1", optional = true }
 
@@ -28,3 +28,6 @@ translation = []
 
 #[[example]]
 #name = "aminokmers"
+
+[package.metadata.docs.rs]
+features = ["translation"]
