--- a/bio-seq/Cargo.toml
+++ b/bio-seq/Cargo.toml
@@ -30,4 +30,5 @@ translation = []
 #name = "aminokmers"
 
 [package.metadata.docs.rs]
-features = ["translation"]
+all-features = true
+#features = ["translation"]
