--- a/bio-seq/Cargo.toml
+++ b/bio-seq/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bio-seq"
-version = "0.13.1"
+version = "0.13.2"
 authors = ["jeff-k <jeff_k@fastmail.com>"]
 edition = "2021"
 description = "Bit packed and well-typed biological sequences"
@@ -31,4 +31,5 @@ simd = []
 #name = "aminokmers"
 
 [package.metadata.docs.rs]
-all-features = true
+features = ["translation", "serde"]
+# all-features = true
