--- a/bio-seq/Cargo.toml
+++ b/bio-seq/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bio-seq"
-version = "0.13.8"
+version = "0.13.12"
 authors = ["jeff-k <jeff_k@fastmail.com>"]
 edition = "2021"
 description = "Bit packed and well-typed biological sequences"
@@ -15,6 +15,8 @@ rust-version = "1.79"
 [dev-dependencies]
 clap = { version="4", features=["derive"] }
 noodles = { version="0.84", features=["fasta"] }
+bincode = "1.3"
+tempfile = "3.0"
 
 [dependencies]
 bitvec = "1"
@@ -35,6 +37,10 @@ required-features = ["noodles/fasta"]
 [[example]]
 name = "codec-bench"
 required-features = ["extra_codecs"]
+
+[[example]]
+name = "seq2bin"
+required-features = ["serde", "noodles/fasta"]
 
 [package.metadata.docs.rs]
 features = ["translation", "serde", "extra_codecs"]
