use trybuild to test compiler errors in derive macros

--- a/bio-seq-derive/Cargo.toml
+++ b/bio-seq-derive/Cargo.toml
@@ -12,5 +12,9 @@ syn = { version="2", features=["full"] }
 quote = "1"
 proc-macro2 = "1"
 
+[dev-dependencies]
+trybuild = "1.0"
+bio-seq = { path = "../bio-seq" }
+
 [lib]
 proc-macro = true
