--- a/bio-seq/Cargo.toml
+++ b/bio-seq/Cargo.toml
@@ -18,6 +18,9 @@ noodles = { version="0.87", features=["fasta"] }
 bincode = "1.3"
 tempfile = "3.0"
 
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3"
+
 [dependencies]
 bitvec = "1"
 bio-seq-derive = { path = "../bio-seq-derive", version="4.9" }
